changes in Part2.py

--- a/Part2_Nootbook.ipynb
+++ b/Part2_Nootbook.ipynb
@@ -68,12 +68,34 @@
     "msg = input(\"Please enter character string:\")\n",
     "print('Resultent characters after shifting all characters by 5: %s'%(encrypt(msg)))\n",
     "print('*********************************************************************************************************************')\n",
-    "######################## End of Problem.5 ########################################################################\n"
+    "######################## End of Problem.2 ########################################################################\n",
+    "#Problem-3: A list comprehension expression that takes a ~200-word paragraph, and checks whether it has any of the swear words mentioned\n",
+    "#in https://github.com/RobertJGabriel/Google-profanity-words/blob/master/list.txt\n",
+    "\n",
+    "######################## End of Problem.2 ########################################################################\n",
+    "#Problem-4: Using reduce function:\n",
+    "#Sub-1:add only even numbers in a list\n",
+    "print(\"Problem-4(Sub-1): Using reduce function add only even numbers in a list\")\n",
+    "print(\"We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\")\n",
+    "a = [1,2,3,4,5,6,7,8,9,10]\n",
+    "k = reduce(lambda x,y:x+y,list(filter(lambda n:n%2==0,a)))\n",
+    "print(\"Sum of only even numbers is: %d\" %k)\n",
+    "\n",
+    "#Sub-2:find the biggest character in a string (printable ASCII characters)\n",
+    "#Sub-3:adds every 3rd number in a list\n",
+    "\n",
+    "######################## End of Problem.2 ########################################################################\n",
+    "#Problem-5\n",
+    "\n",
+    "######################## End of Problem.2 ########################################################################\n",
+    "#Problem-6\n",
+    "\n",
+    "######################## End of Problem.2 ########################################################################\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +103,7 @@
      "output_type": "stream",
      "text": [
       "Problem1: Write a function using only list filter lambda that can tell whether a number is a Fibonacci number or not.\n",
-      "please Enter a number to check if it is a fibonacci number:89\n",
+      "please Enter a number to check if it is a fibonacci number:34\n",
       "Given number is fibonacci\n",
       "*********************************************************************************************************************\n",
       "Problem-2:Sub-1: Using list comprehension write expressions that add 2 iterables a and b such that a is even and b is odd\n",
@@ -95,9 +117,12 @@
       "*********************************************************************************************************************\n",
       "*********************************************************************************************************************\n",
       "Problem-2:Sub-4 takes a small character string and shifts all characters by 5 (handle boundary conditions)\n",
-      "Please enter character string:qwqwqwqw\n",
-      "Resultent characters after shifting all characters by 5: vbvbvbvb\n",
-      "*********************************************************************************************************************\n"
+      "Please enter character string:werwr\n",
+      "Resultent characters after shifting all characters by 5: bjwbw\n",
+      "*********************************************************************************************************************\n",
+      "Problem-4(Sub-1): Using reduce function add only even numbers in a list\n",
+      "We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\n",
+      "Sum of only even numbers is: 30\n"
      ]
     }
    ],
