--- a/Part2_Nootbook.ipynb
+++ b/Part2_Nootbook.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %load Part2.py\n",
+    "# %load part2.py\n",
     "#Assignment-2\n",
     "#Problem-1: Write a function using only list filter lambda that can tell whether a number is a Fibonacci number or not.\n",
     "#You can use a pre-calculated list/dict to store fab numbers till 10000\n",
@@ -44,20 +44,20 @@
     "print([x+y for x,y in zip(list_even,list_odd)])\n",
     "print('*********************************************************************************************************************')\n",
     "######################## End of Problem.2 ########################################################################\n",
-    "#Sub-2:\n",
-    "#strips every vowel from a string provided (tsai>>t s)\n",
+    "#Sub-2: strips every vowel from a string provided (tsai>>t s)\n",
+    "print(\"Problem-2:Sub-2: strips every vowel from a string provided (tsai>>t s)\")\n",
+    "string = input(\"Please enter a string:\")\n",
+    "strip_vowel = \"\".join([c for c in string if c not in [\"a\",\"e\",\"i\",\"o\",\"u\"]])\n",
+    "print(\"After Strip every vowel the string became: %s\" %strip_vowel)\n",
     "\n",
     "print('*********************************************************************************************************************')\n",
     "######################## End of Problem.3 ########################################################################\n",
-    "\n",
-    "#Sub-3:\n",
-    "#acts like a sigmoid function for a 1D array\n",
+    "#Sub-3:#acts like a sigmoid function for a 1D array\n",
+    "print(\"Problem-2:Sub-3:#acts like a sigmoid function for a 1D array\")\n",
     "\n",
     "print('*********************************************************************************************************************')\n",
     "######################## End of Problem.4 ########################################################################\n",
-    "\n",
-    "#Sub-4:\n",
-    "#takes a small character string and shifts all characters by 5 (handle boundary conditions) tsai>>yxfn\n",
+    "#Sub-4:#takes a small character string and shifts all characters by 5 (handle boundary conditions) tsai>>yxfn\n",
     "print(\"Problem-2:Sub-4 takes a small character string and shifts all characters by 5 (handle boundary conditions)\")\n",
     "\n",
     "abc = 'abcdefghijklmnopqrstuvwxyz'\n",
@@ -71,31 +71,46 @@
     "######################## End of Problem.2 ########################################################################\n",
     "#Problem-3: A list comprehension expression that takes a ~200-word paragraph, and checks whether it has any of the swear words mentioned\n",
     "#in https://github.com/RobertJGabriel/Google-profanity-words/blob/master/list.txt\n",
-    "\n",
+    "print(\"Problem-3: A list comprehension expression that takes a ~200-word paragraph, and checks whether it has any of the swear words mentioned \\\n",
+    "in https://github.com/RobertJGabriel/Google-profanity-words/blob/master/list.txt\")\n",
+    "print('*********************************************************************************************************************')\n",
     "######################## End of Problem.2 ########################################################################\n",
     "#Problem-4: Using reduce function:\n",
     "#Sub-1:add only even numbers in a list\n",
-    "print(\"Problem-4(Sub-1): Using reduce function add only even numbers in a list\")\n",
+    "print(\"Problem-4:Sub-1: Using reduce function add only even numbers in a list\")\n",
     "print(\"We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\")\n",
     "a = [1,2,3,4,5,6,7,8,9,10]\n",
     "k = reduce(lambda x,y:x+y,list(filter(lambda n:n%2==0,a)))\n",
     "print(\"Sum of only even numbers is: %d\" %k)\n",
-    "\n",
+    "print('*********************************************************************************************************************')\n",
     "#Sub-2:find the biggest character in a string (printable ASCII characters)\n",
+    "print(\"Problem-4:Sub-2:find the biggest character in a string (printable ASCII characters)\")\n",
+    "st = input(\"Please enter a string:\")\n",
+    "m = max(st)\n",
+    "print(\"biggest character in a string (printable ASCII characters) is %s\" %m)\n",
+    "print('*********************************************************************************************************************')\n",
     "#Sub-3:adds every 3rd number in a list\n",
-    "\n",
-    "######################## End of Problem.2 ########################################################################\n",
+    "print(\"Problem-4:Sub-3:adds every 3rd number in a list\")\n",
+    "print(\"adds every 3rd number in a list\")\n",
+    "print(\"We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\")\n",
+    "print(\"Every third number in this list starting for 1 is [1,4,7,10] and there sum is: 22\")\n",
+    "n = [1,2,3,4,5,6,7,8,9,10]\n",
+    "t = n[::3]\n",
+    "s = reduce(lambda x,y:x+y,t)\n",
+    "print(\"Sum every 3rd number in a list n = [1,2,3,4,5,6,7,8,9,10] is:%d\" %s)\n",
+    "print('*********************************************************************************************************************')\n",
+    "######################## End of Problem.4 ########################################################################\n",
     "#Problem-5\n",
-    "\n",
-    "######################## End of Problem.2 ########################################################################\n",
+    "print('*********************************************************************************************************************')\n",
+    "######################## End of Problem.5 ########################################################################\n",
     "#Problem-6\n",
-    "\n",
-    "######################## End of Problem.2 ########################################################################\n"
+    "print('*********************************************************************************************************************')\n",
+    "######################## End of Problem.6########################################################################\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -103,8 +118,8 @@
      "output_type": "stream",
      "text": [
       "Problem1: Write a function using only list filter lambda that can tell whether a number is a Fibonacci number or not.\n",
-      "please Enter a number to check if it is a fibonacci number:34\n",
-      "Given number is fibonacci\n",
+      "please Enter a number to check if it is a fibonacci number:23\n",
+      "Given number is not fibonacci\n",
       "*********************************************************************************************************************\n",
       "Problem-2:Sub-1: Using list comprehension write expressions that add 2 iterables a and b such that a is even and b is odd\n",
       "Even numbered List:\n",
@@ -114,20 +129,39 @@
       "Result after adding even and odd list\n",
       "[3, 7, 11, 15, 19, 23, 27, 31]\n",
       "*********************************************************************************************************************\n",
+      "Problem-2:Sub-2: strips every vowel from a string provided (tsai>>t s)\n",
+      "Please enter a string:serwer\n",
+      "After Strip every vowel the string became: srwr\n",
       "*********************************************************************************************************************\n",
+      "Problem-2:Sub-3:#acts like a sigmoid function for a 1D array\n",
       "*********************************************************************************************************************\n",
       "Problem-2:Sub-4 takes a small character string and shifts all characters by 5 (handle boundary conditions)\n",
-      "Please enter character string:werwr\n",
-      "Resultent characters after shifting all characters by 5: bjwbw\n",
+      "Please enter character string:wer\n",
+      "Resultent characters after shifting all characters by 5: bjw\n",
       "*********************************************************************************************************************\n",
-      "Problem-4(Sub-1): Using reduce function add only even numbers in a list\n",
+      "Problem-3: A list comprehension expression that takes a ~200-word paragraph, and checks whether it has any of the swear words mentioned in https://github.com/RobertJGabriel/Google-profanity-words/blob/master/list.txt\n",
+      "*********************************************************************************************************************\n",
+      "Problem-4:Sub-1: Using reduce function add only even numbers in a list\n",
       "We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\n",
-      "Sum of only even numbers is: 30\n"
+      "Sum of only even numbers is: 30\n",
+      "*********************************************************************************************************************\n",
+      "Problem-4:Sub-2:find the biggest character in a string (printable ASCII characters)\n",
+      "Please enter a string:sdfdsfsdfds\n",
+      "biggest character in a string (printable ASCII characters) is s\n",
+      "*********************************************************************************************************************\n",
+      "Problem-4:Sub-3:adds every 3rd number in a list\n",
+      "adds every 3rd number in a list\n",
+      "We have a list of numbers: n = [1,2,3,4,5,6,7,8,9,10]\n",
+      "Every third number in this list starting for 1 is [1,4,7,10] and there sum is: 22\n",
+      "Sum every 3rd number in a list n = [1,2,3,4,5,6,7,8,9,10] is:22\n",
+      "*********************************************************************************************************************\n",
+      "*********************************************************************************************************************\n",
+      "*********************************************************************************************************************\n"
      ]
     }
    ],
    "source": [
-    "%run Part2.py"
+    "%run part2.py"
    ]
   },
   {
